--- a/package.json
+++ b/package.json
@@ -12,8 +12,16 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@capacitor/camera": "^1.3.1",
     "@capacitor/cli": "^3.5.1",
+    "@capacitor/clipboard": "^1.0.8",
     "@capacitor/core": "^3.5.1",
+    "@capacitor/device": "^1.1.2",
+    "@capacitor/geolocation": "^1.3.1",
+    "@capacitor/haptics": "^1.1.4",
+    "@capacitor/push-notifications": "^1.0.9",
+    "@capacitor/storage": "^1.2.5",
+    "@capacitor/toast": "^1.0.8",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/toast": "^3.3.1",
     "core-js": "^3.19.3",
