--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development nuxt",
     "prod": "cross-env NODE_ENV=production nuxt",
-    "build": "cross-env NODE_ENV=production build",
+    "build": "cross-env NODE_ENV=production nuxt build",
     "localbuild": "cross-env NODE_ENV=local build",
     "local": "cross-env NODE_ENV=local nuxt",
     "start": "nuxt start",
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@capacitor/android": "^3.5.1",
     "@capacitor/camera": "^1.3.1",
     "@capacitor/cli": "^3.5.1",
     "@capacitor/clipboard": "^1.0.8",
