--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "localbuild": "cross-env NODE_ENV=local build",
     "local": "cross-env NODE_ENV=local nuxt",
     "start": "nuxt start",
-    "generate": "nuxt generate"
+    "generate": "nuxt generate",
+    "style": "prettier --write \"pages/**/*.vue\" & prettier --write \"components/**/*.vue\" & prettier --write \"layouts/**/*.vue\" & prettier --write \"store/**/*.js\" & prettier --write \"plugins/**/*.js\""
   },
   "dependencies": {
     "@capacitor/android": "^3.5.1",
+    "@capacitor/app": "^1.1.1",
     "@capacitor/camera": "^1.3.1",
     "@capacitor/cli": "^3.5.1",
     "@capacitor/clipboard": "^1.0.8",
@@ -35,6 +37,7 @@
     "webpack": "^4.46.0"
   },
   "devDependencies": {
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "prettier": "^2.6.2"
   }
 }
